--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,15 @@
 {
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.4",
+    "@openzeppelin/contracts": "^4.6.0",
     "dotenv": "^16.4.5",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^6.11.1",
     "hardhat": "^2.20.1"
+  },
+  "scripts": {
+    "build": "waffle"
   }
 }
