--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,10 @@
   },
   "scripts": {
     "build": "waffle"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "moralis": "^2.25.0"
   }
 }
