--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,11 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.2",
     "viem": "^2.7.16",
-    "wagmi": "^2.5.7",
-    "react-icons": "^5.0.1"
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
