--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "@mui/material": "^5.15.11",
     "@tanstack/react-query": "^5.24.2",
     "axios": "^1.6.7",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-qr-code": "^2.0.12",
     "react-query": "^3.39.3",
     "viem": "^2.7.16",
-    "wagmi": "^2.5.7",
-    "react-icons": "^5.0.1"
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
